Scrollbar Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,16 @@ a {
   color: gold;
 }
 
-.MuiPagination-root {
-  color: gold;
+@media only screen   
+and (min-device-width : 768px) {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
+
+
